@@ -67,6 +67,10 @@ bzr development version
     * New 'init-repository' command, plus support for repositories in 'init'
       and 'branch' (Aaron Bentley, Erik Bågfors)
 
+    * 'pull' and 'push' now normalise the revision history, so that any two
+      branches with the same tip revision will have the same output from 'log'.
+      (Robert Collins)
+
   CHANGES:
 
     * Commit is now verbose by default, and shows changed filenames and the 
